...
        android:onClick="onRewind"
        app:layout_constraintBottom_toTopOf="@+id/volume_bar"
        app:layout_constraintStart_toEndOf="@+id/previous_button"
        app:srcCompat="@drawable/ic_baseline_fast_rewind_48" />

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="#2196F3"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_play_arrow_48" />

    <TextView
        android:id="@+id/track_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
...
